Included zepto.min.js

--- a/events.html
+++ b/events.html
@@ -72,7 +72,7 @@
         <footer>
         </footer> 
 
-        <script src="js/vendor/jquery/jquery.min.js"></script>
+        <script src="js/vendor/zepto.min.js"></script>
         <script src="js/common.js"></script>
     </body>
 </html>
