--- a/quotes1.html
+++ b/quotes1.html
@@ -57,7 +57,7 @@
             <div class='share button-bottom width100pc'>Share</div>
         </footer> 
 
-        <script src="js/vendor/jquery/jquery.min.js"></script>
+        <script src="js/vendor/zepto.min.js"></script>
         <script src="js/common.js"></script>
     </body>
 </html>
