Added new pages,titles and headings

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
                 <div class="heading">
-                    Quotes
+                    About PRESENCE Spirituality
                 </div>
                 <div class="app-icon"> 
                     <span class="icon"><img src="img/mirror_splash.png" /></span>
