--- a/event-details.html
+++ b/event-details.html
@@ -3,7 +3,7 @@
 <!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Event Details</title>
         <meta name="description" content="">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
                 <div class="heading">
-                    Quotes
+                    June 21-23, 2014
                 </div>
                 <div class="app-icon"> 
                     <span class="icon"><img src="img/mirror_splash.png" /></span>
@@ -65,7 +65,6 @@
                     <div class="details">
                         <p>
                             This is a sample event. 
-
                         </p>
                     </div>
             </div>
