--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Contact</title>
         <meta name="description" content="">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
                 <div class="heading">
-                    Quotes
+                    Contact
                 </div>
                 <div class="app-icon"> 
                     <span class="icon"><img src="img/mirror_splash.png" /></span>
