jquery to zepto

--- a/event-details.html
+++ b/event-details.html
@@ -78,7 +78,7 @@
             </div>
         </footer> 
 
-        <script src="js/vendor/jquery/jquery.min.js"></script>
+        <script src="js/vendor/zepto.min.js"></script>
         <script src="js/common.js"></script>
     </body>
 </html>
