--- a/about-details-1.html
+++ b/about-details-1.html
@@ -54,7 +54,12 @@
             </div>
         </header>
         <footer>
-            <div class='share button-bottom width100pc'>Share</div>
+            <div class='width50pct'>
+                <span class="button-bottom width100pct facebook">Facebook</span>
+            </div>
+            <div class='width50pct'>
+                <span class="button-bottom width100pct website">Website</span>
+            </div>
         </footer> 
 
         <script src="js/vendor/zepto.min.js"></script>
