--- a/about-details-1.html
+++ b/about-details-1.html
@@ -54,10 +54,10 @@
             </div>
         </header>
         <footer>
-            <div class='width50pct'>
+            <div class='width50pct fl-left'>
                 <span class="button-bottom width100pct facebook">Facebook</span>
             </div>
-            <div class='width50pct'>
+            <div class='width50pct fl-right'>
                 <span class="button-bottom width100pct website">Website</span>
             </div>
         </footer> 
