--- a/about-details-1.html
+++ b/about-details-1.html
@@ -54,11 +54,11 @@
             </div>
         </header>
         <footer>
-            <div class='width50pct fl-left'>
-                <span class="button-bottom width100pct facebook">Facebook</span>
+            <div class="facebook width50pct fl-left">
+                <span class="button-bottom width100pct">Facebook</span>
             </div>
-            <div class='width50pct fl-right'>
-                <span class="button-bottom width100pct website">Website</span>
+            <div class="website width50pct fl-right">
+                <span class="button-bottom width100pct">Website</span>
             </div>
         </footer> 
 
