--- a/event-details.html
+++ b/event-details.html
@@ -70,11 +70,11 @@
             </div>
         </div>
         <footer>
-            <div class="share width50pc fl-left">
-                <span class="button-bottom  width100pc">Share</span>
+            <div class="share width50pct fl-left">
+                <span class="button-bottom width100pct">Share</span>
             </div>
-            <div class="register width50pc fl-right">
-                <span class="button-bottom  width100pc">Register</span>
+            <div class="register width50pct fl-right">
+                <span class="button-bottom width100pct">Register</span>
             </div>
         </footer> 
 
