UI Changes. New Styles

--- a/events.html
+++ b/events.html
@@ -24,8 +24,9 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/static-styles.css">
         <link rel="stylesheet" type="text/css" href="css/common.css">
-        <link rel="stylesheet" type="text/css" href="css/mobile1.css">
+        <link rel="stylesheet" type="text/css" href="css/mobile.css">
     </head>
     <body>
         <header>            
@@ -56,7 +57,7 @@
         <div class="content">
             <div class="event-list">
                 <ul>
-                    <li class="event event-box-shadow">
+                    <li class="event-box event-box-shadow padl-20px mrgnt-10px">
                         <div class="info">
                             <p class="name">PRESENCE Immersive</p>
                             <p class="time">June 21-23, 2014</p>
