--- a/about.html
+++ b/about.html
@@ -24,8 +24,9 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/static-styles.css">
         <link rel="stylesheet" type="text/css" href="css/common.css">
-        <link rel="stylesheet" type="text/css" href="css/mobile1.css">
+        <link rel="stylesheet" type="text/css" href="css/mobile.css">
     </head>
     <body>
         <header>            
@@ -54,7 +55,7 @@
             </div>
         </header>
         <footer>
-            <div class='share button-bottom width100pc'>Share</div>
+            <div class='share button-bottom width100pct'>Share</div>
         </footer> 
 
         <script src="js/vendor/zepto.min.js"></script>
