--- a/event-details.html
+++ b/event-details.html
@@ -24,8 +24,9 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/static-styles.css">
         <link rel="stylesheet" type="text/css" href="css/common.css">
-        <link rel="stylesheet" type="text/css" href="css/mobile1.css">
+        <link rel="stylesheet" type="text/css" href="css/mobile.css">
     </head>
     <body>
         <header>            
@@ -55,7 +56,7 @@
         </header>
         <div class="content">
             <div class="event-details">
-                    <div class="event">
+                    <div class="event-box padl-10px mrgnb-20px">
                         <div class="info">
                             <p class="name">PRESENCE Immersive</p>
                             <p class="time">June 21-23, 2014</p>
@@ -64,7 +65,12 @@
                     </div>
                     <div class="details">
                         <p>
-                            This is a sample event. 
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </p>
                     </div>
             </div>
