--- a/images.html
+++ b/images.html
@@ -24,8 +24,9 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/static-styles.css">
         <link rel="stylesheet" type="text/css" href="css/common.css">
-        <link rel="stylesheet" type="text/css" href="css/mobile1.css">
+        <link rel="stylesheet" type="text/css" href="css/mobile.css">
     </head>
     <body>
         <header>            
@@ -53,8 +54,12 @@
                 </div>
             </div>
         </header>
+        <div class="content">
+            <div class="padl-20px padr-20px">
+            </div>
+        </div>
         <footer>
-            <div class='share button-bottom width100pc'>Share</div>
+            <div class='share button-bottom width100pct'>Share</div>
         </footer> 
 
         <script src="js/vendor/zepto.min.js"></script>
