--- a/profile.html
+++ b/profile.html
@@ -24,8 +24,9 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/static-styles.css">
         <link rel="stylesheet" type="text/css" href="css/common.css">
-        <link rel="stylesheet" type="text/css" href="css/mobile1.css">
+        <link rel="stylesheet" type="text/css" href="css/mobile.css">
     </head>
     <body>
         <header>            
