--- a/quotes.html
+++ b/quotes.html
@@ -24,6 +24,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/static-styles.css">
         <link rel="stylesheet" type="text/css" href="css/common.css">
         <link rel="stylesheet" type="text/css" href="css/mobile1.css">
     </head>
@@ -54,7 +55,7 @@
             </div>
         </header>
         <footer>
-            <div class='share button-bottom width100pc'>Share</div>
+            <div class='share button-bottom width100pct'>Share</div>
         </footer> 
 
         <script src="js/vendor/zepto.min.js"></script>
