Added about content and modified styles

--- a/about-details-1.html
+++ b/about-details-1.html
@@ -47,7 +47,7 @@
                     </ul>
                 </div>
                 <div class="heading">
-                    About
+                    About PRESENCE Spirituality
                 </div>
                 <div class="app-icon"> 
                     <span class="icon"><img src="img/mirror_splash.png" /></span>
