--- a/event-details.html
+++ b/event-details.html
@@ -56,14 +56,14 @@
         </header>
         <div class="content">
             <div class="event-details">
-                    <div class="event-box padl-10px mrgnb-20px">
+                    <div class="generic-box padl-10px ">
                         <div class="info">
                             <p class="name">PRESENCE Immersive</p>
                             <p class="time">June 21-23, 2014</p>
                             <p class="place">Schweibenalp, Switzerland</p>
                         </div>                        
                     </div>
-                    <div class="details">
+                    <div class="details mrgnt-20px">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
