--- a/events.html
+++ b/events.html
@@ -57,14 +57,16 @@
         <div class="content">
             <div class="event-list">
                 <ul>
-                    <li class="event-box event-box-shadow padl-20px mrgnt-10px">
-                        <div class="info">
-                            <p class="name">PRESENCE Immersive</p>
-                            <p class="time">June 21-23, 2014</p>
-                            <p class="place">Schweibenalp, Switzerland</p>
-                        </div>
-                        <div class="link">
-                            <a href = "event-details.html">></a>
+                    <li class="generic-box generic-box-shadow padl-10px mrgnt-10px">
+                        <div>
+                            <div class="info width90pct">
+                                <p class="name">PRESENCE Immersive</p>
+                                <p class="time">June 21-23, 2014</p>
+                                <p class="place">Schweibenalp, Switzerland</p>
+                            </div>
+                            <div class="link width10pct fl-right">
+                                <a href="event-details.html"><img src="img/Oval_41.png" class="width50pct"/></a>
+                            </div>
                         </div>
                     </li>                                    
                 </ul>
