--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>About</title>
         <meta name="description" content="">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
@@ -47,15 +47,33 @@
                     </ul>
                 </div>
                 <div class="heading">
-                    About PRESENCE Spirituality
+                    About
                 </div>
                 <div class="app-icon"> 
                     <span class="icon"><img src="img/mirror_splash.png" /></span>
                 </div>
             </div>
         </header>
+        <div class="content">
+            <div class="about">
+                <ul>
+                    <li class=" generic-box padl-10px mrgnt-10px">
+                        <div class="info">
+                            <p class="name">PRESENCE Immersive</p>
+                            <p class="time">Organisation of Events with Maharishikaa Preeti Maiyaa in various countries</p>
+                        </div>
+                    </li>
+                    <li class=" generic-box padl-10px mrgnt-10px">
+                        <div class="info">
+                            <p class="name">PRESENCE Immersive</p>
+                            <p class="time">Organisation of Events with Maharishikaa Preeti Malyaa in various countries</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <footer>
-            <div class='share button-bottom width100pct'>Share</div>
+            <div class="share button-bottom width100pct">Share</div>
         </footer> 
 
         <script src="js/vendor/zepto.min.js"></script>
