--- a/home.html
+++ b/home.html
@@ -32,28 +32,32 @@
         <header>            
             <div>
                 <div class="nav-bar">
-                    <span id="menu" class="menu-icon"><img src="img/Menu_icon.png"></span> 
+                    <span id="menu" class="menu"><img src="img/Menu_icon.png"></span> 
                 </div>
                 <div class="nav-bar-expanded">
                     <ul class="nav">
-                        <li><span class="menu-icon"><img src="img/Menu_icon.png"></span></li>
-                        <li><a href="quotes.html">Quotes</a></li>
-                        <li><a href="answers.html">Answers</a></li>
-                        <li><a href="events.html">Events</a><span></span></li>
-                        <li><a href="images.html">Images</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="profile.html">My Profile</a></li>
+                        <li><span class="menu"><img src="img/Menu_icon.png"></span></li>
+                        <li><a href="#quotes">Quotes</a></li>
+                        <li><a href="#answers">Answers</a></li>
+                        <li><a href="#events">Events</a><span></span></li>
+                        <li><a href="#images">Images</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#profile">My Profile</a></li>
                     </ul>
                 </div>
                 <div class="heading">
                     Quotes
                 </div>
                 <div class="app-icon"> 
-                    <span class="icon"><img src="img/mirror_splash.png" /></span>
+                    <span class="icon"><img  src="img/mirror_splash.png" /></span>
                 </div>
             </div>
         </header>
+        <div class="content">
+            
+        </div>
+
         <footer>
             <div class='share button-bottom width100pct'>Share</div>
         </footer> 
