--- a/events.html
+++ b/events.html
@@ -32,11 +32,11 @@
         <header>            
             <div>
                 <div class="nav-bar">
-                    <span id="menu" class="menu-icon"><img src="img/Menu_icon.png"></span> 
+                    <span id="menu" class="menu"><img src="img/Menu_icon.png"></span> 
                 </div>
                 <div class="nav-bar-expanded">
                     <ul class="nav">
-                        <li><span class="menu-icon"><img src="img/Menu_icon.png"></span></li>
+                        <li><span class="menu"><img src="img/Menu_icon.png"></span></li>
                         <li><a href="quotes.html">Quotes</a></li>
                         <li><a href="answers.html">Answers</a></li>
                         <li><a href="events.html">Events</a><span></span></li>
