Moved to single page

--- a/home.html
+++ b/home.html
@@ -36,14 +36,14 @@
                 </div>
                 <div class="nav-bar-expanded">
                     <ul class="nav">
-                        <li><span class="menu"><img src="img/Menu_icon.png"></span></li>
-                        <li><a href="#quotes">Quotes</a></li>
-                        <li><a href="#answers">Answers</a></li>
-                        <li><a href="#events">Events</a><span></span></li>
-                        <li><a href="#images">Images</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                        <li><a href="#profile">My Profile</a></li>
+                        <li><span class="menu"><img src="img/menu_active.png"></span></li>
+                        <li id="mi-quotes" class="quotes"><a href="#quotes">Quotes</a></li>
+                        <li id="mi-answers" class="answers"><a href="#answers">Answers</a></li>
+                        <li id="mi-events" class="events"><a href="#events">Events</a><span></span></li>
+                        <li id="mi-images" class="images"><a href="#images">Images</a></li>
+                        <li id="mi-about" class="about"><a href="#about">About</a></li>
+                        <li id="mi-contact" class="contact"><a href="#contact">Contact</a></li>
+                        <li id="mi-profile" class="profile"><a href="#profile">My Profile</a></li>
                     </ul>
                 </div>
                 <div class="heading">
@@ -56,6 +56,47 @@
         </header>
         <div class="content">
             
+            <div id="quotes" class="inactive">Quotes</div>
+            <div id="answers" class="inactive">
+                    <h3 class="date">May 21, 2014</h3>
+                    <div class="question">
+                        <p>Question:</p>
+                        <p class="padt-10px">I am single and I am fine with that. But from time to time there's this 
+                            doubt weather I should be more active to find a boyfriend or all I have to do is to be 
+                            ready, open and that time will tell?</p>
+                    </div>
+                    <div class="answer padt-20px">
+                        <p>Answer:</p>
+                        <p class="padt-10px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                    </div>
+            </div>
+            <div id="events" class="inactive">                
+                <div class="event-list">
+                    <ul>
+                        <li class="event-box generic-box-shadow ">
+                            <div class=" padl-10px mrgnt-10px ">
+                                <div class="info width90pct">
+                                    <p class="name">PRESENCE Immersive</p>
+                                    <p class="time">June 21-23, 2014</p>
+                                    <p class="place">Schweibenalp, Switzerland</p>
+                                </div>
+                                <div class="link width10pct fl-right">
+                                    <a href="event-details.html"><img src="img/arrow.png" class="width50pct"/></a>
+                                </div>
+                            </div>
+                        </li>                                    
+                    </ul>
+                </div>
+            </div>
+            <div id="images" class="inactive">Images</div>
+            <div id="about" class="inactive">About</div>
+            <div id="contact" class="inactive">Contact</div>
+            <div id="profile" class="inactive">Profile</div>
         </div>
 
         <footer>
