--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
                 <div class="event-list">
                     <ul>
                         <li class="event-box generic-box-shadow ">
-                            <div class=" padl-10px mrgnt-10px ">
+                            <div class=" padl-10px">
                                 <div class="info width90pct">
                                     <p class="name">PRESENCE Immersive</p>
                                     <p class="time">June 21-23, 2014</p>
