--- a/home.html
+++ b/home.html
@@ -76,16 +76,14 @@
             <div id="events" class="inactive">                
                 <div class="event-list">
                     <ul>
-                        <li class="event-box generic-box-shadow ">
-                            <div class=" padl-10px">
-                                <div class="info width90pct">
-                                    <p class="name">PRESENCE Immersive</p>
-                                    <p class="time">June 21-23, 2014</p>
-                                    <p class="place">Schweibenalp, Switzerland</p>
-                                </div>
-                                <div class="link width10pct fl-right">
-                                    <a href="event-details.html"><img src="img/arrow.png" class="width50pct"/></a>
-                                </div>
+                        <li class="event-box generic-box-shadow padl-10px">
+                            <div class="info width90pct">
+                                <p class="name">PRESENCE Immersive</p>
+                                <p class="time">June 21-23, 2014</p>
+                                <p class="place">Schweibenalp, Switzerland</p>
+                            </div>
+                            <div class="link width10pct fl-right">
+                                <a href="event-details.html"><img src="img/arrow.png" class="width50pct"/></a>
                             </div>
                         </li>                                    
                     </ul>
