Events page changes

--- a/home.html
+++ b/home.html
@@ -78,9 +78,14 @@
                     <ul>
                         <li class="event-box generic-box-shadow padl-10px">
                             <div class="info width90pct">
-                                <p class="name">PRESENCE Immersive</p>
+                                <ul>
+                                    <li class="name">PRESENCE Immersive</li>
+                                    <li class="time">June 21-23, 2014</li>
+                                    <li class="place">Schweibenalp, Switzerland</li>
+                                </ul>
+                                <!-- <p class="name">PRESENCE Immersive</p>
                                 <p class="time">June 21-23, 2014</p>
-                                <p class="place">Schweibenalp, Switzerland</p>
+                                <p class="place">Schweibenalp, Switzerland</p> -->
                             </div>
                             <div class="link width10pct fl-right">
                                 <a href="event-details.html"><img src="img/arrow.png" class="width50pct"/></a>
