Header and footer

--- a/event-details.html
+++ b/event-details.html
@@ -56,11 +56,13 @@
         </header>
         <div class="content">
             <div class="event-details">
-                    <div class="generic-box padl-10px ">
+                    <div class="event-box generic-box padl-10px ">
                         <div class="info">
-                            <p class="name">PRESENCE Immersive</p>
-                            <p class="time">June 21-23, 2014</p>
-                            <p class="place">Schweibenalp, Switzerland</p>
+                            <ul>
+                                <li class="name">PRESENCE Immersive</li>
+                                <li class="time">June 21-23, 2014</li>
+                                <li class="place">Schweibenalp, Switzerland</li>
+                            </ul>
                         </div>                        
                     </div>
                     <div class="details mrgnt-20px">
