--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
                 <div class="heading">
-                    Quotes
+                    Home
                 </div>
                 <div class="app-icon"> 
                     <span class="icon"><img  src="img/mirror_splash.png" /></span>
@@ -83,14 +83,11 @@
                                     <li class="time">June 21-23, 2014</li>
                                     <li class="place">Schweibenalp, Switzerland</li>
                                 </ul>
-                                <!-- <p class="name">PRESENCE Immersive</p>
-                                <p class="time">June 21-23, 2014</p>
-                                <p class="place">Schweibenalp, Switzerland</p> -->
                             </div>
                             <div class="link width10pct fl-right">
-                                <a href="event-details.html"><img src="img/arrow.png" class="width50pct"/></a>
+                                <a href="#event-details" class="event-details"><img src="img/arrow.png" class="width50pct"/></a>
                             </div>
-                        </li>                                    
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -98,10 +95,32 @@
             <div id="about" class="inactive">About</div>
             <div id="contact" class="inactive">Contact</div>
             <div id="profile" class="inactive">Profile</div>
+
+            <div id="event-details" class="inactive">
+                    <div class="event-box generic-box padl-10px ">
+                        <div class="info">
+                            <ul>
+                                <li class="name">PRESENCE Immersive</li>
+                                <li class="time">June 21-23, 2014</li>
+                                <li class="place">Schweibenalp, Switzerland</li>
+                            </ul>
+                        </div>                        
+                    </div>
+                    <div class="details mrgnt-20px">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+            </div>
         </div>
 
         <footer>
-            <div class='share button-bottom width100pct'>Share</div>
+            <div class='share button-bottom width100pct inactive'>Share</div>
         </footer> 
 
         <script src="js/vendor/zepto.min.js"></script>
