--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
                 </div>
         </header>
         <div class="content">
-            
+            <div id="visible-content"></div>
             <div id="quotes" class="inactive">Quotes</div>
             <div id="answers" class="inactive">
                     <h3 class="date">May 21, 2014</h3>
@@ -119,8 +119,8 @@
             </div>
         </div>
 
-        <footer>
-            <div class='share button-bottom width100pct inactive'>Share</div>
+        <footer class="inactive">
+            <div class='share button-bottom width100pct'>Share</div>
         </footer> 
 
         <script src="js/vendor/zepto.min.js"></script>
