--- a/home.html
+++ b/home.html
@@ -36,13 +36,13 @@
                 <div class="nav-bar-expanded">
                     <ul class="nav">
                         <li><span class="menu"><img src="img/menu_active.png"></span></li>
-                        <li id="mi-quotes" class="quotes"><a href="#quotes">Quotes</a></li>
-                        <li id="mi-answers" class="answers"><a href="#answers">Answers</a></li>
-                        <li id="mi-events" class="events"><a href="#events">Events</a><span></span></li>
-                        <li id="mi-images" class="images"><a href="#images">Images</a></li>
-                        <li id="mi-about" class="about"><a href="#about">About</a></li>
-                        <li id="mi-contact" class="contact"><a href="#contact">Contact</a></li>
-                        <li id="mi-profile" class="profile"><a href="#profile">My Profile</a></li>
+                        <li id="mi-quotes" ><a href="#quotes">Quotes <span class="notification-bubble">3</span></a></li>
+                        <li id="mi-answers" ><a href="#answers">Answers</a></li>
+                        <li id="mi-events" ><a href="#events">Events <span class="notification-bubble"></span></a><span></span></li>
+                        <li id="mi-images" ><a href="#images">Images</a></li>
+                        <li id="mi-about" ><a href="#about">About</a></li>
+                        <li id="mi-contact" ><a href="#contact">Contact</a></li>
+                        <li id="mi-profile" ><a href="#profile">My Profile</a></li>
                     </ul>
                 </div>
                 <div class="heading">
@@ -53,8 +53,14 @@
                 </div>
         </header>
         <div class="content">
-            <div id="visible-content"></div>
-            <div id="quotes" class="inactive">Quotes</div>
+            <div id="quotes" class="inactive quotes">
+                <h3 class="date">April 16, 2014</h3>
+                <div class="quote-img"><img src="img/Quote_sign_start.png" class="quote-img fl-left" /></div>
+                <p class="quote">Self-realization is your birthright.<br/> Awaken!<br/> Become aware of the PRESENCE!<br/> Realize the Self! 
+                    <sub><img src="img/Quote_sign_end.png" /></sub></p>
+                <div class="quote-img"><img src="img/Quote_sign_end.png" class="fl-right" /></div>
+                <p class="author">Maharishikaa Preeti Maiyaa</p>
+            </div>
             <div id="answers" class="inactive">
                     <h3 class="date">May 21, 2014</h3>
                     <div class="question">
