--- a/home.html
+++ b/home.html
@@ -98,7 +98,23 @@
                 </div>
             </div>
             <div id="images" class="inactive">Images</div>
-            <div id="about" class="inactive">About</div>
+            <div id="about" class="inactive">
+                <div class="">
+                    <ul>
+                        <li class="about-box generic-box padl-10px">
+                            <div class="info width90pct">
+                                <ul>
+                                    <li class="name">PRESENCE Immersive</li>
+                                    <li class="desc">Organization of events with Maharishikaa Preeti Maiyaa in various countries.</li>
+                                </ul>
+                            </div>
+                            <div class="link width10pct fl-right">
+                                <a href="#about-details" class="about-details"><img src="img/arrow.png" class="width50pct"/></a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <div id="contact" class="inactive">Contact</div>
             <div id="profile" class="inactive">Profile</div>
 
@@ -109,6 +125,26 @@
                                 <li class="name">PRESENCE Immersive</li>
                                 <li class="time">June 21-23, 2014</li>
                                 <li class="place">Schweibenalp, Switzerland</li>
+                            </ul>
+                        </div>                        
+                    </div>
+                    <div class="details mrgnt-20px">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+            </div>
+
+            <div id="about-details" class="inactive">
+                    <div class="generic-box padl-10px ">
+                        <div class="info">
+                            <ul>
+                                <li class="name">PRESENCE Immersive</li>                                
                             </ul>
                         </div>                        
                     </div>
