--- a/home.html
+++ b/home.html
@@ -36,13 +36,13 @@
                 <div class="nav-bar-expanded">
                     <ul class="nav">
                         <li><span class="menu"><img src="img/menu_active.png"></span></li>
-                        <li id="mi-quotes" ><a href="#quotes">Quotes <span class="notification-bubble">3</span></a></li>
-                        <li id="mi-answers" ><a href="#answers">Answers</a></li>
-                        <li id="mi-events" ><a href="#events">Events <span class="notification-bubble"></span></a><span></span></li>
-                        <li id="mi-images" ><a href="#images">Images</a></li>
-                        <li id="mi-about" ><a href="#about">About</a></li>
-                        <li id="mi-contact" ><a href="#contact">Contact</a></li>
-                        <li id="mi-profile" ><a href="#profile">My Profile</a></li>
+                        <li id="mi-quotes" class="item" ><a href="#quotes">Quotes <span class="notification-bubble">3</span></a></li>
+                        <li id="mi-answers" class="item" ><a href="#answers">Answers</a></li>
+                        <li id="mi-events" class="item" ><a href="#events">Events <span class="notification-bubble"></span></a><span></span></li>
+                        <li id="mi-images" class="item" ><a href="#images">Images</a></li>
+                        <li id="mi-about" class="item" ><a href="#about">About</a></li>
+                        <li id="mi-contact" class="item" ><a href="#contact">Contact</a></li>
+                        <li id="mi-profile" class="item" ><a href="#profile">My Profile</a></li>
                     </ul>
                 </div>
                 <div class="heading">
