Contact and Profile pages

--- a/home.html
+++ b/home.html
@@ -115,8 +115,80 @@
                     </ul>
                 </div>
             </div>
-            <div id="contact" class="inactive">Contact</div>
-            <div id="profile" class="inactive">Profile</div>
+            <div id="contact" class="inactive">
+                <ul>
+                    <li>
+                        <div class="country">Europe</div>
+                        <div class="info">
+                            <div class="width50pct fl-left">
+                                <span class="email">
+                                    <img src="img/Email_Icon.png"/>
+                                </span>
+                            </div>
+                            <div class="width50pct fl-right">
+                                <span class="phone">
+                                    <img src="img/Phone_Icon.png"/>
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                    <li><div class="country">India, UK, Australia, Scandinavia, Rest of the world</div>
+                        <div class="info">
+                            <div class="width50pct fl-left">
+                                <span class="email">
+                                    <img src="img/Email_Icon.png"/>
+                                </span>
+                            </div>
+                            <div class="width50pct fl-right">
+                                <span class="phone">
+                                    <img src="img/Phone_Icon.png"/>
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                    <li><div class="country">USA, Canada, South America</div>
+                        <div class="info">
+                            <div class="width50pct fl-left">
+                                <span class="email">
+                                    <img src="img/Email_Icon.png"/>
+                                </span>
+                            </div>
+                            <div class="width50pct fl-right">
+                                <span class="phone">
+                                    <img src="img/Phone_Icon.png"/>
+                                </span>
+                            </div>
+                        </div>
+                    </li>
+                </ul>                
+            </div>
+            <div id="profile" class="inactive">
+                <div class="acc-info">
+                    <div class="heading">ACCOUNT</div>
+                    <div>
+                        <ul>
+                            <li>Name</li>
+                            <li>Email</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="push-notif mrgnt-10px">
+                    <div class="heading">PUSH NOTIFICATIONS</div>
+                    <div>
+                        <ul>
+                            <li>
+                                <div>Quotes</div><div></div>
+                            </li>
+                            <li>
+                                <div>Answers</div><div></div>
+                            </li>
+                            <li>
+                                <span class="">Events</span><span class="toggle-but"></span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
             <div id="event-details" class="inactive">
                     <div class="event-box generic-box padl-10px ">
@@ -144,7 +216,7 @@
                     <div class="generic-box padl-10px ">
                         <div class="info">
                             <ul>
-                                <li class="name">PRESENCE Immersive</li>                                
+                                <li class="name">PRESENCE Spirituality</li>                                
                             </ul>
                         </div>                        
                     </div>
